<resources>
    <string name="app_name">Inventory App</string>

    <!-- Text for the case of empty list [CHAR LIMIT = 50]-->
    <string name="empty_list_text">Click &quot;+&quot; button to start.</string>

    <!-- Labels for item fields on main list -->
    <string name="catalog_label_quantity">Quantity: &#160;</string>
    <string name="catalog_label_price">Price: $ &#160;</string>
    <string name="catalog_button_sale">Sale</string>

    <!-- Labels and buttons at DetailActivity -->
    <string name="detail_activity_name_key" translatable="false">key</string>
    <string name="detail_activity_name_edit">Edit product</string>
    <string name="detail_activity_name_add">New product</string>
    <string name="detail_product_name">Name of product</string>
    <string name="detail_image_description" translatable="false">Product image</string>
    <string name="detail_label_quantity">Quantity:</string>
    <string name="detail_quantity">qty</string>
    <string name="detail_quantity_change">+ or -</string>
    <string name="detail_label_price">Price:</string>
    <string name="detail_price_hint">Enter the price</string>
    <string name="detail_price_dollar" translatable="false">$</string>
    <string name="detail_button_sale">Sale</string>
    <string name="detail_button_receive">Receive</string>
    <string name="detail_button_save">Save</string>
    <string name="detail_button_delete">Delete</string>
    <string name="detail_button_clear">Clear</string>
    <string name="detail_button_order">Order</string>

    <!-- Toast messages for interactive to the user -->
    <string name="toast_created">Product created</string>
    <string name="toast_deleted">Product deleted</string>
    <string name="toast_updated">Product updated</string>
    <string name="toast_fail_create">Unable to create</string>
    <string name="toast_fail_delete">Unable to delete</string>
    <string name="toast_fail_update">Unable to update</string>
    <string name="toast_fail_order">Unable to order</string>
    <string name="toast_enter_name">Fill product name field</string>
    <string name="toast_sale_successful">Successfully sale %1$d of %2$s</string>
    <string name="toast_sale_failed">You have not enough products to sale</string>
    <string name="toast_check_inputs">Some fields are empty. Please fill them</string>

    <!-- Messages for ordering new product by Order button-->
    <string name="order_subject">Order &#160;</string>
    <string name="order_body">Hi!
        I want to order %1$s in quantity of: &#160;</string>

    <!-- Delete dialog -->
    <string name="dialog_delete_title">Delete alert</string>
    <string name="dialog_delete_message">Are you sure to delete this product?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_confirm">Delete</string>

    <!-- Order dialog -->
    <string name="dialog_order_title">Order</string>
    <string name="dialog_order_message">What type of connection do you prefer?</string>
    <string name="dialog_order_phone">Phone call</string>
    <string name="dialog_order_mail">Write email</string>

    <!-- Quit without saving dialog -->
    <string name="dialog_quit_title">Quit alert</string>
    <string name="dialog_quit_message">You have some unsaved changes. Are you sure you want to quit?</string>
    <string name="dialog_quit_cancel">Keep editing</string>
    <string name="dialog_quit_confirm">Quit</string>

    <!-- Transition animation utilities, non-translatable -->
    <string name="picture_name" translatable="false">picture</string>
    <string name="price_name" translatable="false">price</string>
    <string name="quantity_name" translatable="false">quantity</string>
    <string name="product_name" translatable="false">name</string>
</resources>
