<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/detail_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/detail_product_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/detail_image_product"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/detail_image_description"
            android:src="@drawable/picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/detail_label_quantity"
                android:textAllCaps="true" />


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/detail_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/detail_quantity"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

                <Button
                    android:id="@+id/detail_button_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/detail_button_sale" />

                <Button
                    android:id="@+id/detail_button_shipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/detail_button_sale"
                    android:text="@string/detail_button_shipment" />

                <EditText
                    android:id="@+id/detail_edit_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/detail_button_shipment"
                    android:layout_toStartOf="@id/detail_button_shipment"
                    android:hint="@string/detail_quantity_change"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_label_price"
                android:textAllCaps="true" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/detail_edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_price_hint"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/detail_price_dollar" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_check_black_24dp"
                android:drawableStart="@drawable/ic_check_black_24dp"
                android:text="@string/detail_button_save"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/detail_button_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_truck_delivery_black_24dp"
                android:drawableStart="@drawable/ic_truck_delivery_black_24dp"
                android:text="@string/detail_button_order"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/detail_button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_delete_forever_black_24dp"
                android:drawableStart="@drawable/ic_delete_forever_black_24dp"
                android:text="@string/detail_button_delete"
                android:textAlignment="textEnd" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>